deploy/overlays/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jobops-demo
  labels:
    app.kubernetes.io/part-of: jobops
    app.kubernetes.io/environment: local-demo
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
